--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ikr_application">
+        android:theme="@style/Theme.Ikr_application"
+        tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,20 +23,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity-alias
-            android:name="DeeplinkHandler"
-            android:targetActivity=".MainActivity"
-            android:exported="true"
-            >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:scheme="ikrapp" android:host="screens" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="ikrapp" />
             </intent-filter>
-        </activity-alias>
+        </activity>
     </application>
 
 </manifest>
