--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ material3 = "1.4.0"
 
 mpandroidchart = "3.1.0"
 timber = "4.7.1"
+joda-time = "2.13.0"
 
 [libraries]
 coil-kt-coil = { module = "io.coil-kt:coil" }
@@ -59,6 +60,7 @@ mpandroidchart = { group = "com.github.PhilJay", name = "MPAndroidChart", versio
 retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson" }
 retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+joda-time = { module = "joda-time:joda-time", version.ref = "joda-time" }
 
 [bundles]
 ui-core = ["androidx-activity-ktx", "androidx-fragment-ktx",
