--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,16 +5,7 @@ fragmentKtx = "1.8.9"
 kotlin = "2.2.20"
 coreKtx = "1.17.0"
 junit = "4.13.2"
-<<<<<<< HEAD
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-appcompat = "1.6.1"
-material = "1.10.0"
-activity = "1.8.0"
-constraintlayout = "2.1.4"
-material3 = "1.4.0"
-coil = "2.6.0"
-=======
+
 junitVersion = "1.3.0"
 espressoCore = "3.7.1"
 appcompat = "1.7.1"
@@ -29,9 +20,14 @@ retrofit-kotlinx-serialization = "1.0.0"
 okhttp-logging = "5.3.2"
 coil = "3.3.0"
 lifecycleRuntimeKtx = "2.10.0"
->>>>>>> main
+material3 = "1.4.0"
+
+mpandroidchart = "3.1.0"
+jetbrainsKotlinJvm = "2.2.20"
 
 [libraries]
+coil-kt-coil = { module = "io.coil-kt:coil" }
+gson = { module = "com.google.code.gson:gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -50,8 +46,8 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
-coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 
+philjay-mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 retrofit-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit-kotlinx-serialization" }
@@ -59,6 +55,9 @@ okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-intercepto
 
 coil = { module = "io.coil-kt.coil3:coil", version.ref = "coil" }
 coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
+mpandroidchart = { group = "com.github.PhilJay", name = "MPAndroidChart", version.ref = "mpandroidchart" }
+retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson" }
+retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit" }
 
 [bundles]
 ui-core = ["androidx-activity-ktx", "androidx-fragment-ktx",
@@ -71,4 +70,6 @@ network = ["retrofit", "converter-gson", "retrofit-kotlinx-serialization-convert
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
