--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ okhttp-logging = "5.3.2"
 coil = "3.3.0"
 lifecycleRuntimeKtx = "2.10.0"
 material3 = "1.4.0"
+jetbrainsKotlinJvm = "2.0.21"
 
 
 [libraries]
@@ -62,4 +63,6 @@ network = ["retrofit", "converter-gson", "retrofit-kotlinx-serialization-convert
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 
