fix: remove direct dependencies on chart:data and network:data modules

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,12 @@
             <meta-data
                 android:name="com.eremin.impl.ModuleInitializer"
                 android:value="androidx.startup" />
+            <meta-data
+                android:name="com.n0tsszzz.network.data.ModuleInitializer"
+                android:value="androidx.startup" />
+            <meta-data
+                android:name="com.n0tsszzz.chart.data.ModuleInitializer"
+                android:value="androidx.startup" />
         </provider>
 
     </application>
