--- a/libs/catLover/data/src/main/AndroidManifest.xml
+++ b/libs/catLover/data/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             tools:node="merge"
             >
             <meta-data
-                android:name="com.roomstorage.data.ModuleInitializer"
+                android:name="com.example.data.ModuleInitializer"
                 android:value="androidx.startup"
                 />
         </provider>
