--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
             <meta-data
                 android:name="com.n0tsszzz.chart.data.ModuleInitializer"
                 android:value="androidx.startup" />
+            <meta-data
+                android:name="com.artemkaa.network.data.ModuleInitializer"
+                android:value="androidx.startup" />
         </provider>
 
     </application>
