--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,12 @@
             <meta-data
                 android:name="com.akiko23.network.data.ModuleInitializer"
                 android:value="androidx.startup" />
+            <meta-data
+                android:name="com.grigoran.network.data.ModuleInitializer"
+                android:value="androidx.startup" />
+            <meta-data
+                android:name="com.example.nastyazz.ModuleInitializer"
+                android:value="androidx.startup" />
         </provider>
 
     </application>
